--- a/templates/account/index.html.twig
+++ b/templates/account/index.html.twig
@@ -2,7 +2,7 @@
 
 {% block userName %}
     <div class="user-control user-name">
-        {#{{ user.name }} {{ user.surname }}#}
+        {{ account.name }} {{ account.surname }}
     </div>
 {% endblock %}
 
