--- a/public/css/main.css
+++ b/public/css/main.css
@@ -196,4 +196,10 @@ footer {
     font-size: 1.5rem;
     font-weight: 700;
 }
+
+.no-accoounts-found {
+    margin-top: 20px;
+    font-size: 2rem;
+    margin-left: 0;
+}
 /* END MAIN CONTENT OF ACCOUNTS */
