--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -46,7 +46,7 @@
                             <a class="nav-link" href="#">Strona główna</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link ml-2" href="#">Przelew</a>
+                            <a class="nav-link ml-2" href="transfer">Przelew</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link ml-2" href="#">Historia</a>
